--- a/bsconfig.json
+++ b/bsconfig.json
@@ -3,10 +3,15 @@
   "reason": {
     "react-jsx": 3
   },
-  "sources": {
-    "dir" : "src",
-    "subdirs" : true
-  },
+  "sources": [
+    {
+      "dir": "src"
+    },
+    {
+      "dir": "src/__tests__",
+      "type": "dev"
+    }
+  ],
   "bsc-flags": [
     "-bs-super-errors",
     "-bs-no-version-header"
@@ -23,7 +28,7 @@
     "reason-react"
   ],
   "bs-dev-dependencies": [
-    "@glennsl/bs-jest",
+    "@glennsl/rescript-jest",
     "bs-react-testing-library"
   ],
   "refmt": 3
