--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@glennsl/bs-jest": "^0.6.0",
+    "@glennsl/rescript-jest": "^0.9.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
@@ -17,14 +18,16 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "re:build": "rescript",
+    "re:start": "rescript build -w",
     "start": "run-p start:*",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "bsb -make-world",
-    "start:re": "bsb -make-world -w",
+    "postinstall": "rescript build",
+    "start:re": "rescript build -w",
     "start:cra": "react-scripts start",
-    "prebuild": "bsb -clean-world -make-world"
+    "prebuild": "rescript clean"
   },
   "eslintConfig": null,
   "browserslist": {
@@ -42,5 +45,17 @@
   "resolutions": {
     "react": "0.0.0-experimental-4ead6b530",
     "react-dom": "0.0.0-experimental-4ead6b530"
+  },
+  "devDependencies": {
+    "esbuild-jest": "^0.5.0",
+    "rescript": "^9.1.4"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "esbuild-jest"
+    },
+    "transformIgnorePatterns": [
+      "<rootDir>/node_modules/(?!(rescript|@glennsl/rescript-jest)/)"
+    ]
   }
 }
