--- a/bsconfig.json
+++ b/bsconfig.json
@@ -12,6 +12,7 @@
       "type": "dev"
     }
   ],
+  "ppx-flags": ["@davesnx/styled-ppx/ppx"],
   "bsc-flags": [
     "-bs-super-errors",
     "-bs-no-version-header"
@@ -25,7 +26,9 @@
   "suffix": ".bs.js",
   "namespace": true,
   "bs-dependencies": [
-    "reason-react"
+    "reason-react",
+    "bs-css",
+    "bs-css-emotion"
   ],
   "bs-dev-dependencies": [
     "@glennsl/rescript-jest",
