--- a/package.json
+++ b/package.json
@@ -52,9 +52,12 @@
     "react-dom": "0.0.0-experimental-4ead6b530"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.4",
     "esbuild-jest": "^0.5.0",
     "gh-pages": "^3.2.3",
-    "rescript": "^9.1.4"
+    "postcss": "^8.4.12",
+    "rescript": "^9.1.4",
+    "tailwindcss": "^3.0.23"
   },
   "jest": {
     "transform": {
